--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -254,6 +254,8 @@
 <!ENTITY Ctr_pananimation	"'Panel-Aufklappmenü öffnen'">
 <!ENTITY Ctr_tabanimation	"'Tab schließen und öffnen' (about:config Einstellung)">
 <!ENTITY Ctr_dlanimation	"'Download gestartet und beendet' (about:config Einstellung)">
+<!ENTITY Ctr_fsanimation	"'Vollbild Animationen' (about:config Einstellung)">
+<!ENTITY Ctr_fsaduration	"'Vollbild Animationen' für HTML5 Inhalte (about:config Einstellungen)">
 
 <!ENTITY Ctr_toolsitem		"Eintrag im Menü 'Extras'">
 <!ENTITY Ctr_appmenuitem	"Eintrag im Einstellungsuntermenü der &brandShortName;-Schaltfläche">
