--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -254,6 +254,8 @@
 <!ENTITY Ctr_pananimation	"Animación en la apertura de panel">
 <!ENTITY Ctr_tabanimation	"Animación en la apertura/cierre de pestañas (about:config >> browser.tabs.animate)">
 <!ENTITY Ctr_dlanimation	"Animación de la 'notificación de descarga' (about:config >> browser.download.animateNotifications)">
+<!ENTITY Ctr_fsanimation	"Fullscreen animations (about:config preference)">
+<!ENTITY Ctr_fsaduration	"Fullscreen animations for HTML5 content (about:config preferences)">
 
 <!ENTITY Ctr_toolsitem		"Elemento en el menú Herramientas">
 <!ENTITY Ctr_appmenuitem	"Elemento en el menú de la aplicación">
