--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -254,6 +254,8 @@
 <!ENTITY Ctr_pananimation	"Animation d'ouverture des panneaux">
 <!ENTITY Ctr_tabanimation	"Animation de l'ouverture et la fermeture des onglets (about:config)">
 <!ENTITY Ctr_dlanimation	"Animation de 'Téléchargement terminé' (about:config)">
+<!ENTITY Ctr_fsanimation	"Fullscreen animations (about:config preference)">
+<!ENTITY Ctr_fsaduration	"Fullscreen animations for HTML5 content (about:config preferences)">
 
 <!ENTITY Ctr_toolsitem		"Classic Theme Restorer dans le menu outils">
 <!ENTITY Ctr_appmenuitem	"Classic Theme Restorer dans le menu d'applications">
