--- a/xpi/locale/tr/options.dtd
+++ b/xpi/locale/tr/options.dtd
@@ -254,6 +254,8 @@
 <!ENTITY Ctr_pananimation	"Panel açılış animasyonu">
 <!ENTITY Ctr_tabanimation	"Sekme kapama/açma animasyonu (about:config tercihi)">
 <!ENTITY Ctr_dlanimation	"'İndirme Bildirisi' animasyonu (about:config  tercihi)">
+<!ENTITY Ctr_fsanimation	"Fullscreen animations (about:config preference)">
+<!ENTITY Ctr_fsaduration	"Fullscreen animations for HTML5 content (about:config preferences)">
 
 <!ENTITY Ctr_toolsitem		"Araçlar menüsünde menü ögeleri">
 <!ENTITY Ctr_appmenuitem	"Appbuttons menüsünde menü ögeleri">
