--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -254,6 +254,8 @@
 <!ENTITY Ctr_pananimation	"打开面板动画">
 <!ENTITY Ctr_tabanimation	"打开/关闭标签页动画 (about:config 选项)">
 <!ENTITY Ctr_dlanimation	"“下载提醒”动画 (about:config 选项)">
+<!ENTITY Ctr_fsanimation	"Fullscreen animations (about:config preference)">
+<!ENTITY Ctr_fsaduration	"Fullscreen animations for HTML5 content (about:config preferences)">
 
 <!ENTITY Ctr_toolsitem		"在工具菜单中显示菜单项">
 <!ENTITY Ctr_appmenuitem	"在 &brandShortName; 按钮菜单中显示菜单项">
