--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -254,6 +254,8 @@
 <!ENTITY Ctr_pananimation	"Animace otevření panelu">
 <!ENTITY Ctr_tabanimation	"Animace zavření/otevření panelu (předvolba about:config)">
 <!ENTITY Ctr_dlanimation	"Animace 'upozornění stahování' (předvolba about:config)">
+<!ENTITY Ctr_fsanimation	"Fullscreen animations (about:config preference)">
+<!ENTITY Ctr_fsaduration	"Fullscreen animations for HTML5 content (about:config preferences)">
 
 <!ENTITY Ctr_toolsitem		"Položka v nabídce Nástroje">
 <!ENTITY Ctr_appmenuitem	"Položka v nabídce tlačítka aplikace">
