--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -254,6 +254,8 @@
 <!ENTITY Ctr_pananimation	"Animation ved åbning af panel">
 <!ENTITY Ctr_tabanimation	"Animation ved lukning/åbning af faneblad (about:config indstilling)">
 <!ENTITY Ctr_dlanimation	"Animation ved 'Filhentning notifikation' (about:config indstilling)">
+<!ENTITY Ctr_fsanimation	"Fullscreen animations (about:config preference)">
+<!ENTITY Ctr_fsaduration	"Fullscreen animations for HTML5 content (about:config preferences)">
 
 <!ENTITY Ctr_toolsitem		"Menupunkt i værktøjslinje">
 <!ENTITY Ctr_appmenuitem	"Menupunkt i programknappermenu">
