--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -254,8 +254,8 @@
 <!ENTITY Ctr_pananimation	"Animacija za wócynjanje póla">
 <!ENTITY Ctr_tabanimation	"Animacija za zacynjanje/wócynjanje rejtarka (nastajenje about:config)">
 <!ENTITY Ctr_dlanimation	"Animacija za 'ześěgnjeńske zdźělenje' (nastajenje about:config)">
-<!ENTITY Ctr_fsanimation	"Fullscreen animations (about:config preference)">
-<!ENTITY Ctr_fsaduration	"Fullscreen animations for HTML5 content (about:config preferences)">
+<!ENTITY Ctr_fsanimation	"Animacije na połnej wobrazowce (nastajenje about:config)">
+<!ENTITY Ctr_fsaduration	"Animacije na połnej wobrazowce za wopśimjeśe HTML5 (nastajenja about:config)">
 
 <!ENTITY Ctr_toolsitem		"Menijowy zapisk w meniju Rědy">
 <!ENTITY Ctr_appmenuitem	"Menijowy zapisk w meniju nałožeńskich tłocaškow">
