--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -53,6 +53,7 @@
 <!ENTITY Ctr_tabwidthinfo	"Die Minimal- und Maximalbreite von Tabs wird von 'TabMixPlus' kontrolliert">
 <!ENTITY Ctr_tabwidthinfo2	"Die Minimal- und Maximalbreite von Tabs wird von 'TabUtilities' kontrolliert">
 <!ENTITY Ctr_tabwidthinfo3	"Werte unter 48px sorgen meistens für eine fehlerhafte Darstellung!">
+<!ENTITY Ctr_square_edges	"Eckige obere Tabränder">
 <!ENTITY Ctr_tabinsertion	"Verwandten Tab nach aktuellem Tab einfügen (about:config Einstellung)">
 <!ENTITY Ctr_emptyfavicon	"Leeres Lesezeichensymbol auf Tabs wiederherstellen">
 <!ENTITY Ctr_noemptypticon	"Leeres Lesezeichensymbol auf angehefteten Tabs verstecken">
@@ -64,7 +65,11 @@
 <!ENTITY Ctr_closetab_4		"Am Anfang der Tableiste">
 <!ENTITY Ctr_closetab_5		"Auf allen Tabs erzwingen">
 <!ENTITY Ctr_closetab_hfot	"Versteckt bei nur einem sichtbaren Tab">
-<!ENTITY Ctr_closealt		"Alternatives Schließen-Symbol">
+<!ENTITY Ctr_closei_def		"Schließen-Symbol: standard">
+<!ENTITY Ctr_closei_red		"Schließen-Symbol: rot">
+<!ENTITY Ctr_closei_w7		"Schließen-Symbol: Windows 7">
+<!ENTITY Ctr_closei_w10		"Schließen-Symbol: Windows 10">
+<!ENTITY Ctr_closei_w10i	"Schließen-Symbol: Windows 10 (invertiert)">
 <!ENTITY Ctr_closeonleft	"Am Anfang des Tabs">
 <!ENTITY Ctr_close_wwltab	"Schließt Fenster mit nur einem sichtbaren Tab (about:config Einstellung)">
 
