--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -53,6 +53,7 @@
 <!ENTITY Ctr_tabwidthinfo	"Το εύρος καρτελών ελέγχεται από την επέκταση «TabMixPlus»">
 <!ENTITY Ctr_tabwidthinfo2	"Το εύρος καρτελών ελέγχεται από την επέκταση «TabUtilities»">
 <!ENTITY Ctr_tabwidthinfo3	"Τιμές κάτω από 48px θα προκαλέσουν δυσλειτουργίες στις περισσότερες περιπτώσεις!">
+<!ENTITY Ctr_square_edges	"Squared top corners">
 <!ENTITY Ctr_tabinsertion	"Εισαγωγή συναφούς καρτέλας μετά την τρέχουσα καρτέλα (προτίμηση about:config)">
 <!ENTITY Ctr_emptyfavicon	"Επαναφορά κενού εικονιδίου (εάν ένας ιστότοπος δεν διαθέτει εικονίδιο)">
 <!ENTITY Ctr_noemptypticon	"Αφαίρεση κενού εικονιδίου από καρτέλες εφαρμογών">
@@ -64,7 +65,11 @@
 <!ENTITY Ctr_closetab_4		"Στην αρχή της εργαλειοθήκης καρτελών">
 <!ENTITY Ctr_closetab_5		"Σε όλες τις καρτέλες (επιβεβλημένα)">
 <!ENTITY Ctr_closetab_hfot	"Απόκρυψη για μόνο μία ορατή καρτέλα">
-<!ENTITY Ctr_closealt		"Κόκκινο εικονίδιο κλεισίματος">
+<!ENTITY Ctr_closei_def		"Default close icon">
+<!ENTITY Ctr_closei_red		"Red close icon">
+<!ENTITY Ctr_closei_w7		"Windows 7 close icon">
+<!ENTITY Ctr_closei_w10		"Windows 10 close icon">
+<!ENTITY Ctr_closei_w10i	"Windows 10 inverted close icon">
 <!ENTITY Ctr_closeonleft	"Εναλλακτική θέση στην καρτέλα">
 <!ENTITY Ctr_close_wwltab	"Κλείσιμο παραθύρου κλείνοντας την τελευταία ορατή καρτέλα (προτίμηση about:config)">
 
