--- a/xpi/locale/en-US/options.dtd
+++ b/xpi/locale/en-US/options.dtd
@@ -53,6 +53,7 @@
 <!ENTITY Ctr_tabwidthinfo	"Tab width is controlled by TabMixPlus">
 <!ENTITY Ctr_tabwidthinfo2	"Tab width is controlled by TabUtilities">
 <!ENTITY Ctr_tabwidthinfo3	"Values below 48px will cause glitches in most cases!">
+<!ENTITY Ctr_square_edges	"Squared top corners">
 <!ENTITY Ctr_tabinsertion	"Insert related tab after current tab (about:config preference)">
 <!ENTITY Ctr_emptyfavicon	"Restore empty favicon (if a site does not offer one)">
 <!ENTITY Ctr_noemptypticon	"Remove empty favicon from pinned tabs">
@@ -64,7 +65,11 @@
 <!ENTITY Ctr_closetab_4		"On tab toolbars start">
 <!ENTITY Ctr_closetab_5		"On all tabs (forced)">
 <!ENTITY Ctr_closetab_hfot	"Hide for one visible tab">
-<!ENTITY Ctr_closealt		"Red close icon">
+<!ENTITY Ctr_closei_def		"Default close icon">
+<!ENTITY Ctr_closei_red		"Red close icon">
+<!ENTITY Ctr_closei_w7		"Windows 7 close icon">
+<!ENTITY Ctr_closei_w10		"Windows 10 close icon">
+<!ENTITY Ctr_closei_w10i	"Windows 10 inverted close icon">
 <!ENTITY Ctr_closeonleft	"Alternative position on tab">
 <!ENTITY Ctr_close_wwltab	"Close window with last visible tab (about:config preference)">
 
