--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -53,6 +53,7 @@
 <!ENTITY Ctr_tabwidthinfo	"La larghezza minima e massima delle schede è definita da TabMixPlus">
 <!ENTITY Ctr_tabwidthinfo2	"La larghezza minima e massima delle schede è definita da TabUtilities">
 <!ENTITY Ctr_tabwidthinfo3	"I valori inferiori a 48px provocheranno anomalie nella maggior parte dei casi!">
+<!ENTITY Ctr_square_edges	"Squared top corners">
 <!ENTITY Ctr_tabinsertion	"Inserisci la scheda relativa dopo la scheda corrente (about:config)">
 <!ENTITY Ctr_emptyfavicon	"Nei siti che non hanno una favicon usa la vecchia favicon vuota">
 <!ENTITY Ctr_noemptypticon	"Rimuovi la favicon vuota dalla scheda bloccata">
@@ -64,7 +65,11 @@
 <!ENTITY Ctr_closetab_4		"A sinistra della barra delle schede">
 <!ENTITY Ctr_closetab_5		"In tutte le schede (forzato)">
 <!ENTITY Ctr_closetab_hfot	"Nascondi per la scheda in vista">
-<!ENTITY Ctr_closealt		"Icona alternativa">
+<!ENTITY Ctr_closei_def		"Default close icon">
+<!ENTITY Ctr_closei_red		"Red close icon">
+<!ENTITY Ctr_closei_w7		"Windows 7 close icon">
+<!ENTITY Ctr_closei_w10		"Windows 10 close icon">
+<!ENTITY Ctr_closei_w10i	"Windows 10 inverted close icon">
 <!ENTITY Ctr_closeonleft	"Posizione alternativa sulla scheda">
 <!ENTITY Ctr_close_wwltab	"Chiudi la finestra con l'ultima scheda visibile (about:config)">
 
