--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -53,6 +53,7 @@
 <!ENTITY Ctr_tabwidthinfo	"Larguras Mínimas e Máximas são Controladas Pelo TabMixPlus">
 <!ENTITY Ctr_tabwidthinfo2	"Larguras Mínimas e Máximas são Controladas Pelo TabUtilities">
 <!ENTITY Ctr_tabwidthinfo3	"Valores Abaixo de 48px Causarão Falhas na Maioria dos Casos!">
+<!ENTITY Ctr_square_edges	"Squared top corners">
 <!ENTITY Ctr_tabinsertion	"Inserir a Aba Relacionada Depois da Aba Atual (about:config)">
 <!ENTITY Ctr_emptyfavicon	"Restaurar o Favicon Vazio (Se um Site Não Oferecer Um)">
 <!ENTITY Ctr_noemptypticon	"Remover o Favicon Vazio da Aba Fixa">
@@ -64,7 +65,11 @@
 <!ENTITY Ctr_closetab_4		"No Início das Barras de Abas">
 <!ENTITY Ctr_closetab_5		"Em Todas as Abas (Forçada)">
 <!ENTITY Ctr_closetab_hfot	"Ocultar com uma Aba Visível">
-<!ENTITY Ctr_closealt		"Ícone Alternativo">
+<!ENTITY Ctr_closei_def		"Default close icon">
+<!ENTITY Ctr_closei_red		"Red close icon">
+<!ENTITY Ctr_closei_w7		"Windows 7 close icon">
+<!ENTITY Ctr_closei_w10		"Windows 10 close icon">
+<!ENTITY Ctr_closei_w10i	"Windows 10 inverted close icon">
 <!ENTITY Ctr_closeonleft	"Posição Alternativa na Aba">
 <!ENTITY Ctr_close_wwltab	"Fechar a Janela com a Última Aba Visível (about:config)">
 
