--- a/xpi/locale/zh-TW/options.dtd
+++ b/xpi/locale/zh-TW/options.dtd
@@ -53,6 +53,7 @@
 <!ENTITY Ctr_tabwidthinfo	"分頁的最小和最大寬度由 Tab Mix Plus 控制">
 <!ENTITY Ctr_tabwidthinfo2	"分頁的最小和最大寬度由 Tab Utilities 控制">
 <!ENTITY Ctr_tabwidthinfo3	"小於 48px 的值有可能導致故障!">
+<!ENTITY Ctr_square_edges	"Squared top corners">
 <!ENTITY Ctr_tabinsertion	"Insert related tab after current tab (about:config)">
 <!ENTITY Ctr_emptyfavicon	"開啟的網頁若未提供網站圖示，仍在該分頁顯示空圖示">
 <!ENTITY Ctr_noemptypticon	"從釘選分頁移除空圖示">
@@ -64,7 +65,11 @@
 <!ENTITY Ctr_closetab_4		"在分頁列左端顯示關閉按鈕">
 <!ENTITY Ctr_closetab_5		"全部的分頁都顯示關閉按鈕 (強制)">
 <!ENTITY Ctr_closetab_hfot	"只有一個分頁時，則隱藏關閉按鈕">
-<!ENTITY Ctr_closealt		"換個圖示">
+<!ENTITY Ctr_closei_def		"Default close icon">
+<!ENTITY Ctr_closei_red		"Red close icon">
+<!ENTITY Ctr_closei_w7		"Windows 7 close icon">
+<!ENTITY Ctr_closei_w10		"Windows 10 close icon">
+<!ENTITY Ctr_closei_w10i	"Windows 10 inverted close icon">
 <!ENTITY Ctr_closeonleft	"關閉按鈕置於分頁左側">
 <!ENTITY Ctr_close_wwltab	"關閉最後一個分頁時，也關閉視窗 (about:config)">
 
