--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -65,11 +65,7 @@
 <!ENTITY Ctr_closetab_4		"Na zachopjeńku rejtarkoweje rědki">
 <!ENTITY Ctr_closetab_5		"Na wšych rejtarkach (wunuźony)">
 <!ENTITY Ctr_closetab_hfot	"Za jaden widobny rejtar schowaś">
-<!ENTITY Ctr_closei_def		"Default close icon">
-<!ENTITY Ctr_closei_red		"Red close icon">
-<!ENTITY Ctr_closei_w7		"Windows 7 close icon">
-<!ENTITY Ctr_closei_w10		"Windows 10 close icon">
-<!ENTITY Ctr_closei_w10i	"Windows 10 inverted close icon">
+<!ENTITY Ctr_closei_def		"Default icons">
 <!ENTITY Ctr_closeonleft	"Alternatiwna pozicija na rejtarku">
 <!ENTITY Ctr_close_wwltab	"Wokno ze slědnym widobnym rejtarkom zacyniś (about:config)">
 
