--- a/xpi/locale/ja/options.dtd
+++ b/xpi/locale/ja/options.dtd
@@ -65,11 +65,7 @@
 <!ENTITY Ctr_closetab_4		"ツールバーの最初に表示">
 <!ENTITY Ctr_closetab_5		"全てのタブ (強制)">
 <!ENTITY Ctr_closetab_hfot	"可視タブに対して隠す">
-<!ENTITY Ctr_closei_def		"Default close icon">
-<!ENTITY Ctr_closei_red		"Red close icon">
-<!ENTITY Ctr_closei_w7		"Windows 7 close icon">
-<!ENTITY Ctr_closei_w10		"Windows 10 close icon">
-<!ENTITY Ctr_closei_w10i	"Windows 10 inverted close icon">
+<!ENTITY Ctr_closei_def		"Default icons">
 <!ENTITY Ctr_closeonleft	"別の位置に表示">
 <!ENTITY Ctr_close_wwltab	"最後の可視タブをもつウィンドウを閉じる (about:config)">
 
