--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -53,7 +53,7 @@
 <!ENTITY Ctr_tabwidthinfo	"Szerokość karty jest kontrolowana przez TabMixPlus">
 <!ENTITY Ctr_tabwidthinfo2	"Szerokość karty jest kontrolowana przez TabUtilities">
 <!ENTITY Ctr_tabwidthinfo3	"Wartości poniżej 48 pikseli w większości przypadków spowodują błędy!">
-<!ENTITY Ctr_square_edges	"Squared top corners">
+<!ENTITY Ctr_square_edges	"Kwadratowe górne rogi">
 <!ENTITY Ctr_tabinsertion	"Wstaw powiązaną kartę za kartą bieżącą (about:config)">
 <!ENTITY Ctr_emptyfavicon	"Przywróć pustą ikonę ulubionych (jeżeli strona nie zaoferuje żadnej)">
 <!ENTITY Ctr_noemptypticon	"Usuń pustą ikonę ulubionych z przypiętej karty">
@@ -65,11 +65,7 @@
 <!ENTITY Ctr_closetab_4		"Na początku paska kart">
 <!ENTITY Ctr_closetab_5		"Na wszystkich kartach (wymuszone)">
 <!ENTITY Ctr_closetab_hfot	"Ukryj na jednej widocznej karcie">
-<!ENTITY Ctr_closei_def		"Default close icon">
-<!ENTITY Ctr_closei_red		"Red close icon">
-<!ENTITY Ctr_closei_w7		"Windows 7 close icon">
-<!ENTITY Ctr_closei_w10		"Windows 10 close icon">
-<!ENTITY Ctr_closei_w10i	"Windows 10 inverted close icon">
+<!ENTITY Ctr_closei_def		"Domyślna ikona zamykania">
 <!ENTITY Ctr_closeonleft	"Alternatywna pozycja na karcie">
 <!ENTITY Ctr_close_wwltab	"Zamykaj okno z ostatnią widoczną kartą (about:config)">
 
