--- a/xpi/locale/tr/options.dtd
+++ b/xpi/locale/tr/options.dtd
@@ -65,11 +65,7 @@
 <!ENTITY Ctr_closetab_4		"Araç çubuğunun başladığı sekmede">
 <!ENTITY Ctr_closetab_5		"Tüm sekmelerde (zorla)">
 <!ENTITY Ctr_closetab_hfot	"Görünen sekme için sakla">
-<!ENTITY Ctr_closei_def		"Default close icon">
-<!ENTITY Ctr_closei_red		"Red close icon">
-<!ENTITY Ctr_closei_w7		"Windows 7 close icon">
-<!ENTITY Ctr_closei_w10		"Windows 10 close icon">
-<!ENTITY Ctr_closei_w10i	"Windows 10 inverted close icon">
+<!ENTITY Ctr_closei_def		"Default icons">
 <!ENTITY Ctr_closeonleft	"Sekme üstünde alternatif pozisyon">
 <!ENTITY Ctr_close_wwltab	"Son görülebilir sekmeyle sencereyi kapat (about:config)">
 
