--- a/xpi/locale/uk/options.dtd
+++ b/xpi/locale/uk/options.dtd
@@ -65,11 +65,7 @@
 <!ENTITY Ctr_closetab_4		"на початку панелі">
 <!ENTITY Ctr_closetab_5		"на всіх вкладках (примусово)">
 <!ENTITY Ctr_closetab_hfot	"Приховати для однієї видимої вкладки">
-<!ENTITY Ctr_closei_def		"Default close icon">
-<!ENTITY Ctr_closei_red		"Red close icon">
-<!ENTITY Ctr_closei_w7		"Windows 7 close icon">
-<!ENTITY Ctr_closei_w10		"Windows 10 close icon">
-<!ENTITY Ctr_closei_w10i	"Windows 10 inverted close icon">
+<!ENTITY Ctr_closei_def		"Default icons">
 <!ENTITY Ctr_closeonleft	"Альтернативна позиція на вкладці">
 <!ENTITY Ctr_close_wwltab	"Закрити вікно з останньою видимою вкладкою (about:config)">
 
