--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -65,11 +65,7 @@
 <!ENTITY Ctr_closetab_4		"Στην αρχή της εργαλειοθήκης καρτελών">
 <!ENTITY Ctr_closetab_5		"Σε όλες τις καρτέλες (επιβεβλημένα)">
 <!ENTITY Ctr_closetab_hfot	"Απόκρυψη για μόνο μία ορατή καρτέλα">
-<!ENTITY Ctr_closei_def		"Default close icon">
-<!ENTITY Ctr_closei_red		"Red close icon">
-<!ENTITY Ctr_closei_w7		"Windows 7 close icon">
-<!ENTITY Ctr_closei_w10		"Windows 10 close icon">
-<!ENTITY Ctr_closei_w10i	"Windows 10 inverted close icon">
+<!ENTITY Ctr_closei_def		"Default icons">
 <!ENTITY Ctr_closeonleft	"Εναλλακτική θέση στην καρτέλα">
 <!ENTITY Ctr_close_wwltab	"Κλείσιμο παραθύρου κλείνοντας την τελευταία ορατή καρτέλα (προτίμηση about:config)">
 
