--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -65,11 +65,7 @@
 <!ENTITY Ctr_closetab_4		"Al principio de las barras de pestañas">
 <!ENTITY Ctr_closetab_5		"En todas las pestañas (forzado)">
 <!ENTITY Ctr_closetab_hfot	"Ocultar para una sola pestaña visible">
-<!ENTITY Ctr_closei_def		"Default close icon">
-<!ENTITY Ctr_closei_red		"Red close icon">
-<!ENTITY Ctr_closei_w7		"Windows 7 close icon">
-<!ENTITY Ctr_closei_w10		"Windows 10 close icon">
-<!ENTITY Ctr_closei_w10i	"Windows 10 inverted close icon">
+<!ENTITY Ctr_closei_def		"Default icons">
 <!ENTITY Ctr_closeonleft	"Posición alternativa en la pestaña">
 <!ENTITY Ctr_close_wwltab	"Cerrar ventana con la última pestaña (about:config >> browser.tabs.closeWindowWithLastTab)">
 
