--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -65,11 +65,7 @@
 <!ENTITY Ctr_closetab_4		"Au début de la barre d'onglets">
 <!ENTITY Ctr_closetab_5		"Sur tous les onglets (forcé)">
 <!ENTITY Ctr_closetab_hfot	"Masquer si un seul onglet est visible">
-<!ENTITY Ctr_closei_def		"Default close icon">
-<!ENTITY Ctr_closei_red		"Red close icon">
-<!ENTITY Ctr_closei_w7		"Windows 7 close icon">
-<!ENTITY Ctr_closei_w10		"Windows 10 close icon">
-<!ENTITY Ctr_closei_w10i	"Windows 10 inverted close icon">
+<!ENTITY Ctr_closei_def		"Default icons">
 <!ENTITY Ctr_closeonleft	"Position alternative sur l'onglet">
 <!ENTITY Ctr_close_wwltab	"Fermer la fenêtre lorsque je ferme le dernier onglet (about:config)">
 
