--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -65,11 +65,7 @@
 <!ENTITY Ctr_closetab_4		"No Início das Barras de Abas">
 <!ENTITY Ctr_closetab_5		"Em Todas as Abas (Forçada)">
 <!ENTITY Ctr_closetab_hfot	"Ocultar com uma Aba Visível">
-<!ENTITY Ctr_closei_def		"Default close icon">
-<!ENTITY Ctr_closei_red		"Red close icon">
-<!ENTITY Ctr_closei_w7		"Windows 7 close icon">
-<!ENTITY Ctr_closei_w10		"Windows 10 close icon">
-<!ENTITY Ctr_closei_w10i	"Windows 10 inverted close icon">
+<!ENTITY Ctr_closei_def		"Default icons">
 <!ENTITY Ctr_closeonleft	"Posição Alternativa na Aba">
 <!ENTITY Ctr_close_wwltab	"Fechar a Janela com a Última Aba Visível (about:config)">
 
